fixed become instructor page and icon not aligning with texts

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -11,3 +11,7 @@
 .pointer {
   cursor: pointer;
 }
+
+svg {
+  vertical-align: baseline;
+}
